--- a/templates/dashboard/home.html
+++ b/templates/dashboard/home.html
@@ -29,7 +29,7 @@
                                 <h3 class="panel-title">Total Raised</h3>
                             </div>
                             <div class="panel-body">
-                                <h3>${{ total_raised|intcomma }}</h3>
+                                <h3>₹{{ total_raised|intcomma }}</h3>
                             </div>
                         </div>
                     </div>
@@ -46,10 +46,10 @@
                     <div class="col-md-4">
                         <div class="panel panel-default text-center">
                             <div class="panel-heading">
-                                <h3 class="panel-title">Total Donations</h3>
+                                <h3 class="panel-title">My Donations Given</h3>
                             </div>
                             <div class="panel-body">
-                                <h3>{{ total_donations }}</h3>
+                                <h3>₹{{ my_given_total|intcomma }} ({{ my_given_count }})</h3>
                             </div>
                         </div>
                     </div>
@@ -61,7 +61,7 @@
                     <div class="col-md-12">
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <h3 class="panel-title">Funds Raised (Last 30 Days)</h3>
+                                <h3 class="panel-title">My Donations Given (Last 30 Days)</h3>
                             </div>
                             <div class="panel-body">
                                 <canvas id="fundsChart"></canvas>
@@ -102,7 +102,7 @@
         data: {
             labels: dates,
             datasets: [{
-                label: 'Funds Raised ($)',
+                label: 'Given (₹)',
                 data: amounts,
                 borderColor: '#28a745',
                 backgroundColor: 'rgba(40, 167, 69, 0.1)',
@@ -117,7 +117,7 @@
                     beginAtZero: true,
                     ticks: {
                         callback: function(value) {
-                            return '$' + value;
+                            return '₹' + value;
                         }
                     }
                 }
