--- a/templates/home.html
+++ b/templates/home.html
@@ -73,7 +73,7 @@
 
                     <div class="col-md-4 border-stats">
                         <h1 class="btn-block text-center class-montserrat margin-bottom-zero none-overflow">
-                            ${{ fund_raised.donation__sum }}</h1>
+                            ₹{{ fund_raised.donation__sum }}</h1>
                         <h5 class="btn-block text-center class-montserrat subtitle-color text-uppercase">
                             FUNDS RAISED</h5>
                     </div><!-- col-md-3 -->
