--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -23,12 +23,12 @@
             <div class="col-md-3 margin-tp-xs">
                 <h4 class="margin-top-zero">About</h4>
                 <ul class="list-unstyled">
-                    <li><a class="link-footer" href="#">Terms of Service</a></li>
-                    <li><a class="link-footer" href="#">Privacy Policy</a></li>
-                    <li><a class="link-footer" href="#">About BetterTogether</a></li>
-                    <li><a class="link-footer" href="#">Help Center</a></li>
-                    <li><a class="link-footer" href="#">Success Stories</a></li>
-                    <li><a class="link-footer" href="#">Campaign Guidelines</a></li>
+                    <li><a class="link-footer" href="{% url 'core:terms' %}">Terms of Service</a></li>
+                    <li><a class="link-footer" href="{% url 'core:privacy' %}">Privacy Policy</a></li>
+                    <li><a class="link-footer" href="{% url 'core:about' %}">About BetterTogether</a></li>
+                    <li><a class="link-footer" href="{% url 'core:help' %}">Help Center</a></li>
+                    <li><a class="link-footer" href="{% url 'core:success-stories' %}">Success Stories</a></li>
+                    <li><a class="link-footer" href="{% url 'core:guidelines' %}">Campaign Guidelines</a></li>
                 </ul>
             </div><!-- ./End col-md-* -->
 
