--- a/templates/includes/javascripts.html
+++ b/templates/includes/javascripts.html
@@ -4,8 +4,7 @@
     ================================================== -->
 <script src="{% static 'plugins/jQuery/jQuery-2.1.4.min.js' %}"></script>
 <script src="{% static 'js/jquery.easing.1.3.js' %}"></script>
-<script src="{% static 'js/jquery-ui-1.10.3.custom.min.js' %}"></script>
-<script src="{% static 'js/jquery.ui.touch-punch.min.js' %}"></script>
+{# Removed jQuery UI and Touch Punch (unused) #}
 <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
 <script src="{% static 'js/jquery.autosize.min.js' %}"></script>
 {#<script src="{% static 'js/jqueryTimeago.js' %}"></script>#}
@@ -13,7 +12,8 @@
 <script src="{% static 'js/count.js' %}"></script>
 <script src="{% static 'js/functions.js' %}"></script>
 <script src="{% static 'js/jquery.form.js' %}"></script>
-<script src="{% static 'plugins/sweetalert/sweetalert.min.js' %}"></script>
-<script src="{% static 'js/holder.min.js' %}"></script>
+<!-- SweetAlert2 (modern, CDN) -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.all.min.js"></script>
 
 {#<script src="{% static 'js/cookies.js' %}"></script>#}
