--- a/templates/dashboard/home.html
+++ b/templates/dashboard/home.html
@@ -100,7 +100,7 @@
                                             <div class="panel-body">
                                                 <div class="row">
                                                     <div class="col-xs-4">
-                                                        <img src="{{ campaign.image.url }}" 
+                                                        <img src="{{ campaign.image_url }}" 
                                                              alt="{{ campaign.title }}" 
                                                              class="img-responsive img-rounded" 
                                                              style="width: 100%; height: 80px; object-fit: cover;">
